// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`src/components/gallery/GalleryCard > with a comment content > return GalleryCard with content readonly 1`] = `
<div>
  <div
    class="GalleryCard selected"
    style="opacity: 1;"
  >
    
    <div
      class="gallery-item"
    />
    <div
      class="gallery-title"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    
    
  </div>
</div>
`;

exports[`src/components/gallery/GalleryCard > with a comment content > should match snapshot 1`] = `
<div>
  <div
    class="GalleryCard selected"
    style="opacity: 1;"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper override menuOpened optionsMenu"
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
      <div
        class="Menu noselect left "
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div>
              <div
                aria-label="Delete"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Delete
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Duplicate"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-content-copy content-copy"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Duplicate
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Move to a board…"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <svg
                      class="BoardIcon Icon"
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        opacity="0.8"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Move to a board…
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Copy link"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-link-variant LinkIcon"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Copy link
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div />
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              aria-label="Cancel"
              class="MenuOption TextOption menu-option menu-cancel"
              role="button"
            >
              <div
                class="d-flex"
              >
                <div
                  class="noicon"
                />
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Cancel
                </div>
                
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="gallery-item"
    />
    <div
      class="gallery-title"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    
    
  </div>
</div>
`;

exports[`src/components/gallery/GalleryCard > with an image content > should match snapshot 1`] = `
<div>
  <div
    class="GalleryCard selected"
    style="opacity: 1;"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper override menuOpened optionsMenu"
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
      <div
        class="Menu noselect left "
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div>
              <div
                aria-label="Delete"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Delete
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Duplicate"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-content-copy content-copy"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Duplicate
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Move to a board…"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <svg
                      class="BoardIcon Icon"
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        opacity="0.8"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Move to a board…
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Copy link"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-link-variant LinkIcon"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Copy link
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div />
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              aria-label="Cancel"
              class="MenuOption TextOption menu-option menu-cancel"
              role="button"
            >
              <div
                class="d-flex"
              >
                <div
                  class="noicon"
                />
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Cancel
                </div>
                
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="gallery-item"
    />
    <div
      class="gallery-title"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    
    
  </div>
</div>
`;

exports[`src/components/gallery/GalleryCard > with many contents > return GalleryCard with contents readonly 1`] = `
<div>
  <div
    class="GalleryCard selected"
    style="opacity: 1;"
  >
    
    <div
      class="gallery-item"
    />
    <div
      class="gallery-title"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    
    
  </div>
</div>
`;

exports[`src/components/gallery/GalleryCard > with many contents > should match snapshot 1`] = `
<div>
  <div
    class="GalleryCard selected"
    style="opacity: 1;"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper override menuOpened optionsMenu"
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
      <div
        class="Menu noselect left "
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div>
              <div
                aria-label="Delete"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Delete
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Duplicate"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-content-copy content-copy"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Duplicate
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Move to a board…"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <svg
                      class="BoardIcon Icon"
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        opacity="0.8"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Move to a board…
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Copy link"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-link-variant LinkIcon"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Copy link
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div />
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              aria-label="Cancel"
              class="MenuOption TextOption menu-option menu-cancel"
              role="button"
            >
              <div
                class="d-flex"
              >
                <div
                  class="noicon"
                />
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Cancel
                </div>
                
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="gallery-item"
    />
    <div
      class="gallery-title"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    
    
  </div>
</div>
`;

exports[`src/components/gallery/GalleryCard > with many images content > should match snapshot with only first image 1`] = `
<div>
  <div
    class="GalleryCard selected"
    style="opacity: 1;"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper override menuOpened optionsMenu"
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
      <div
        class="Menu noselect left "
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div>
              <div
                aria-label="Delete"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Delete
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Duplicate"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-content-copy content-copy"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Duplicate
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Move to a board…"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <svg
                      class="BoardIcon Icon"
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        opacity="0.8"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Move to a board…
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Copy link"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-link-variant LinkIcon"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Copy link
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div />
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              aria-label="Cancel"
              class="MenuOption TextOption menu-option menu-cancel"
              role="button"
            >
              <div
                class="d-flex"
              >
                <div
                  class="noicon"
                />
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Cancel
                </div>
                
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="gallery-item"
    />
    <div
      class="gallery-title"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    
    
  </div>
</div>
`;

exports[`src/components/gallery/GalleryCard > without block content > return GalleryCard and cancel 1`] = `
<div>
  <div
    class="GalleryCard selected"
    style="opacity: 1;"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper optionsMenu"
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
      
    </div>
    <div
      class="gallery-item"
    />
    <div
      class="gallery-title"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    
    
  </div>
</div>
`;

exports[`src/components/gallery/GalleryCard > without block content > return GalleryCard and copy link 1`] = `
<div>
  <div
    class="GalleryCard selected"
    style="opacity: 1;"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper optionsMenu"
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
      
    </div>
    <div
      class="gallery-item"
    />
    <div
      class="gallery-title"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    
    
  </div>
</div>
`;

exports[`src/components/gallery/GalleryCard > without block content > return GalleryCard and delete card 1`] = `
<div>
  <div
    class="GalleryCard selected"
    style="opacity: 1;"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper optionsMenu"
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
      
    </div>
    <div
      class="gallery-item"
    />
    <div
      class="gallery-title"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    
    
  </div>
  <div
    class="Dialog dialog-back confirmation-dialog-box size--small"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div>
            <h1
              class="dialog-title"
            />
            
          </div>
          <div
            class="toolbar--right"
          >
            
            
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="box-area"
          title="Confirmation dialog"
        >
          <h3
            class="text-heading5"
          >
            Confirm card delete!
          </h3>
          <div
            class="sub-text"
          />
          <div
            class="action-buttons"
          >
            <button
              title="Cancel"
              type="button"
            >
              
              <span>
                Cancel
              </span>
              
            </button>
            <button
              title="Delete"
              type="submit"
            >
              
              <span>
                Delete
              </span>
              
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`src/components/gallery/GalleryCard > without block content > return GalleryCard and duplicate card 1`] = `
<div>
  <div
    class="GalleryCard selected"
    style="opacity: 1;"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper optionsMenu"
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
      
    </div>
    <div
      class="gallery-item"
    />
    <div
      class="gallery-title"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    
    
  </div>
</div>
`;

exports[`src/components/gallery/GalleryCard > without block content > should match snapshot 1`] = `
<div>
  <div
    class="GalleryCard selected"
    style="opacity: 1;"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper override menuOpened optionsMenu"
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
      <div
        class="Menu noselect left "
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div>
              <div
                aria-label="Delete"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Delete
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Duplicate"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-content-copy content-copy"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Duplicate
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Move to a board…"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <svg
                      class="BoardIcon Icon"
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        opacity="0.8"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Move to a board…
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Copy link"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-link-variant LinkIcon"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Copy link
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div />
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              aria-label="Cancel"
              class="MenuOption TextOption menu-option menu-cancel"
              role="button"
            >
              <div
                class="d-flex"
              >
                <div
                  class="noicon"
                />
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Cancel
                </div>
                
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="gallery-item"
    />
    <div
      class="gallery-title"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    <div
      class="gallery-props"
    >
      <div
        class="octo-tooltip tooltip-top"
        data-tooltip="testTemplateProperty"
      >
        <div
          class="octo-propertyvalue octo-propertyvalue--readonly"
        />
      </div>
    </div>
    
  </div>
</div>
`;
